--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/btn_ADD"
         app:layout_constraintVertical_bias="0.914">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -27,7 +27,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_ADD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
