--- a/app/src/main/res/layout/versus_item.xml
+++ b/app/src/main/res/layout/versus_item.xml
@@ -7,8 +7,8 @@
     app:cardCornerRadius="4dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         >
 
@@ -17,12 +17,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Line 1"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_alignParentTop="true"/>
 
+        <ImageView
+            android:id="@+id/image_Delete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_delete" />
+
     </RelativeLayout>
+
+
 
 
 </androidx.cardview.widget.CardView>
