--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.914">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/itemView"
+            android:id="@+id/categoryView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/darker_gray"
