--- a/app/src/main/res/layout/versus_category.xml
+++ b/app/src/main/res/layout/versus_category.xml
@@ -13,7 +13,7 @@
         >
 
         <TextView
-            android:id="@+id/itemTextView"
+            android:id="@+id/categoryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Line 1"
@@ -23,7 +23,7 @@
             android:layout_alignParentTop="true"/>
 
         <ImageView
-            android:id="@+id/image_Delete"
+            android:id="@+id/image_Category_Delete"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
