--- a/app/src/main/res/layout/versus_category.xml
+++ b/app/src/main/res/layout/versus_category.xml
@@ -30,6 +30,16 @@
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_delete" />
 
+        <ImageView
+            android:id="@+id/image_Category_Edit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_edit" />
+
     </RelativeLayout>
 
 
