--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -53,18 +53,22 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp">
+            android:layout_marginBottom="0dp"
+            android:padding="10px">
 
             <TableRow
                 android:id="@+id/table_col"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
 
                 <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/textView_Itm"
+                    android:layout_width="300px"
+                    android:layout_height="150px"
+                    android:gravity="center"
                     android:text="New Item" />
+
             </TableRow>
         </HorizontalScrollView>
     </RelativeLayout>
@@ -91,7 +95,6 @@
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp">
 
-
             <TableLayout
                 android:id="@+id/table_row"
                 android:layout_width="match_parent"
@@ -99,12 +102,14 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
                     <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_Category"
+                        android:layout_width="match_parent"
+                        android:layout_height="100px"
+                        android:gravity="center"
                         android:text="New Category" />
                 </TableRow>
 
@@ -118,10 +123,10 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/relativeLayout3"
         app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/relativeLayout3"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.1">
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -134,24 +139,25 @@
 
                 <TableLayout
                     android:id="@+id/table_items"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#f1f1f1">
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:gravity="center">
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        <TextView
+                            android:id="@+id/textView_Value"
+                            android:layout_width="300px"
+                            android:layout_height="100px"
+                            android:layout_marginVertical="1dp"
+                            android:layout_marginHorizontal="1dp"
+                            android:background="#ffffff"
+                            android:gravity="center"
+                            android:text="New Value" />
+                    </TableRow>
                 </TableLayout>
             </ScrollView>
         </HorizontalScrollView>
