--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -104,10 +104,10 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
+                    android:layout_height="wrap_content">
 
                     <TextView
+                        android:layout_marginTop="3dp"
                         android:id="@+id/textView_Category"
                         android:layout_width="match_parent"
                         android:layout_height="100px"
