--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -63,12 +63,12 @@
                 android:layout_height="match_parent"
                 android:gravity="center">
 
-                <TextView
-                    android:id="@+id/textView_Itm"
-                    android:layout_width="300px"
-                    android:layout_height="150px"
-                    android:gravity="center"
-                    android:text="New Item" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textView_Itm"-->
+<!--                    android:layout_width="300px"-->
+<!--                    android:layout_height="150px"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="New Item" />-->
 
             </TableRow>
         </com.example.versus.HorizontalScroll>
@@ -87,13 +87,13 @@
         <com.example.versus.VerticalScroll
             android:id="@+id/itemCategory_Vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp">
 
@@ -101,19 +101,6 @@
                 android:id="@+id/table_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_marginTop="3dp"
-                        android:id="@+id/textView_Category"
-                        android:layout_width="match_parent"
-                        android:layout_height="100px"
-                        android:gravity="center"
-                        android:text="New Category" />
-                </TableRow>
 
             </TableLayout>
         </com.example.versus.VerticalScroll>
@@ -146,20 +133,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#f1f1f1">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/textView_Value"
-                            android:layout_width="300px"
-                            android:layout_height="100px"
-                            android:background="#ffffff"
-                            android:gravity="center"
-                            android:text="New Value" />
-                    </TableRow>
                 </TableLayout>
             </com.example.versus.VerticalScroll>
         </com.example.versus.HorizontalScroll>
