--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -45,8 +45,8 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="100dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginTop="100dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
@@ -67,7 +67,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayout2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:layout_alignTop="@+id/relativeLayout"
             android:layout_alignBottom="@+id/relativeLayout"
             android:layout_alignParentEnd="true"
@@ -78,6 +78,27 @@
             android:layout_toEndOf="@+id/relativeLayout">
 
             <com.example.versus.HorizontalScroll
+                android:id="@+id/itemImage_Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="40dp">
+
+                <TableRow
+                    android:id="@+id/table_images"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                </TableRow>
+
+            </com.example.versus.HorizontalScroll>
+
+            <com.example.versus.HorizontalScroll
                 android:id="@+id/itemName_Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -86,7 +107,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginEnd="0dp"
                 android:layout_marginBottom="0dp"
                 android:padding="0dp">
