--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -77,7 +77,7 @@
             android:layout_marginBottom="0dp"
             android:layout_toEndOf="@+id/relativeLayout">
 
-            <com.example.versus.HorizontalScroll
+            <com.nested.versus.HorizontalScroll
                 android:id="@+id/itemImage_Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -96,9 +96,9 @@
 
                 </TableRow>
 
-            </com.example.versus.HorizontalScroll>
+            </com.nested.versus.HorizontalScroll>
 
-            <com.example.versus.HorizontalScroll
+            <com.nested.versus.HorizontalScroll
                 android:id="@+id/itemName_Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -119,7 +119,7 @@
                     android:gravity="center">
 
                 </TableRow>
-            </com.example.versus.HorizontalScroll>
+            </com.nested.versus.HorizontalScroll>
         </RelativeLayout>
 
         <RelativeLayout
@@ -135,7 +135,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="30dp">
 
-            <com.example.versus.VerticalScroll
+            <com.nested.versus.VerticalScroll
                 android:id="@+id/itemCategory_Vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
                     android:layout_height="wrap_content">
 
                 </TableLayout>
-            </com.example.versus.VerticalScroll>
+            </com.nested.versus.VerticalScroll>
         </RelativeLayout>
 
         <LinearLayout
@@ -170,12 +170,12 @@
             android:layout_toEndOf="@+id/relativeLayout3"
             android:orientation="horizontal">
 
-            <com.example.versus.HorizontalScroll
+            <com.nested.versus.HorizontalScroll
                 android:id="@+id/itemValue_Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <com.example.versus.VerticalScroll
+                <com.nested.versus.VerticalScroll
                     android:id="@+id/itemValue_Vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -186,8 +186,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#f1f1f1"></TableLayout>
-                </com.example.versus.VerticalScroll>
-            </com.example.versus.HorizontalScroll>
+                </com.nested.versus.VerticalScroll>
+            </com.nested.versus.HorizontalScroll>
 
         </LinearLayout>
 
