--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,24 @@
 
     <RelativeLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="@dimen/three_five_five_sp"
+        android:layout_height="@dimen/five_hundreds_sp"
+        android:layout_marginStart="@dimen/five_sp"
+        android:layout_marginTop="@dimen/ten_sp"
+        android:layout_marginEnd="@dimen/five_sp"
+        android:layout_marginBottom="@dimen/five_sp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/btn_ADD">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/categoryView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"
-            android:padding="4dp"
+            android:background="@android:color/background_light"
+            android:padding="@dimen/two_sp"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,13 +34,34 @@
 
     <Button
         android:id="@+id/btn_ADD"
+        android:layout_width="@dimen/forty_sp"
+        android:layout_height="@dimen/forty_sp"
+        android:layout_marginStart="@dimen/three_five_five_sp"
+        android:layout_marginTop="@dimen/sixteen_sp"
+        android:layout_marginEnd="@dimen/twenty_sp"
+        android:background="@drawable/adding_button"
+        android:text="@string/adding_button_plus_sign"
+        android:textAlignment="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/thirty_sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_title" />
+
+    <TextView
+        android:id="@+id/main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="10dp"
-        android:text="Add"
+        android:layout_marginStart="@dimen/one_six_eight_sp"
+        android:layout_marginTop="@dimen/sixty_five_sp"
+        android:layout_marginEnd="@dimen/one_six_eight_sp"
+        android:fontFamily="@font/convergence"
+        android:text="@string/main_title"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/thirty_sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.987"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
