--- a/app/src/main/res/layout/versus_category.xml
+++ b/app/src/main/res/layout/versus_category.xml
@@ -3,41 +3,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    app:cardBackgroundColor="@color/colorGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        >
+        android:layout_margin="@dimen/ten_sp">
 
         <TextView
             android:id="@+id/categoryTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Line 1"
-            android:textSize="25sp"
-            android:textStyle="bold"
+            android:layout_height="@dimen/fifty_five_sp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="@dimen/five_sp"
+            android:fontFamily="@font/convergence"
+            android:gravity="center"
+            android:text="@string/Line1"
             android:textColor="@android:color/black"
-            android:layout_alignParentTop="true"/>
+            android:textSize="@dimen/twenty_five_sp" />
 
         <ImageView
             android:id="@+id/image_Category_Delete"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/fifty_five_sp"
+            android:layout_height="@dimen/fifty_five_sp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/two_sp"
+            android:layout_marginEnd="@dimen/zero_sp"
             android:src="@drawable/ic_delete" />
 
         <ImageView
             android:id="@+id/image_Category_Edit"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/fifty_five_sp"
+            android:layout_height="@dimen/fifty_five_sp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginTop="@dimen/one_sp"
+            android:layout_marginEnd="@dimen/five_sp"
+            android:layout_toStartOf="@+id/image_Category_Delete"
             android:src="@drawable/ic_edit" />
 
     </RelativeLayout>
