--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGray">#d4d5d6</color>
+    <color name="colorRed">#ba3636</color>
+    <color name="colorDarkGray">#666666</color>
+    <color name="f1f1f1">#f1f1f1</color>
 </resources>
