Fixed database bug and constraints of view

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,8 +11,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintHeight_max="@dimen/five_hundreds_dp"
-        app:layout_constraintHeight_min="@dimen/five_hundreds_dp"
+        app:layout_constraintHeight_max="@dimen/two_fifty_dp"
+        app:layout_constraintHeight_min="@dimen/two_fifty_dp"
         android:layout_marginStart="@dimen/five_dp"
         android:layout_marginTop="@dimen/ten_dp"
         android:layout_marginEnd="@dimen/five_dp"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/one_six_eight_dp"
-        android:layout_marginTop="@dimen/twenty_dp"
+        android:layout_marginTop="@dimen/five_dp"
         android:layout_marginEnd="@dimen/one_six_eight_dp"
         android:fontFamily="@font/convergence"
         android:text="@string/main_title"
