--- a/app/src/main/res/layout/activity_item_image.xml
+++ b/app/src/main/res/layout/activity_item_image.xml
@@ -10,8 +10,8 @@
         android:id="@+id/itemImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/fifty_sp"
-        android:layout_marginBottom="@dimen/fifty_sp"
+        android:layout_marginTop="@dimen/fifty_dp"
+        android:layout_marginBottom="@dimen/fifty_dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
