--- a/app/src/main/res/values/sizes.xml
+++ b/app/src/main/res/values/sizes.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="zero_sp">0sp</dimen>
-    <dimen name="one_sp">1sp</dimen>
-    <dimen name="two_sp">2sp</dimen>
-    <dimen name="five_sp">5sp</dimen>
-    <dimen name="eight_sp">8sp</dimen>
-    <dimen name="ten_sp">10sp</dimen>
-    <dimen name="sixteen_sp">16sp</dimen>
-    <dimen name="twenty_sp">20sp</dimen>
-    <dimen name="twenty_five_sp">25sp</dimen>
-    <dimen name="thirty_sp">30sp</dimen>
-    <dimen name="thirty_five_sp">35sp</dimen>
-    <dimen name="forty_sp">40sp</dimen>
-    <dimen name="fifty_sp">50sp</dimen>
-    <dimen name="fifty_five_sp">55sp</dimen>
-    <dimen name="sixty_sp">60sp</dimen>
-    <dimen name="sixty_five_sp">65sp</dimen>
-    <dimen name="eighty_sp">80sp</dimen>
-    <dimen name="hundred_sp">100sp</dimen>
-    <dimen name="one_fifty_sp">150sp</dimen>
-    <dimen name="one_six_eight_sp">168sp</dimen>
-    <dimen name="two_seven_four_sp">274sp</dimen>
-    <dimen name="three_hundreds_sp">300sp</dimen>
-    <dimen name="three_five_five_sp">355sp</dimen>
-    <dimen name="four_one_seven_sp">417sp</dimen>
-    <dimen name="five_hundreds_sp">500sp</dimen>
+    <dimen name="zero_dp">0dp</dimen>
+    <dimen name="one_dp">1dp</dimen>
+    <dimen name="two_dp">2dp</dimen>
+    <dimen name="five_dp">5dp</dimen>
+    <dimen name="eight_dp">8dp</dimen>
+    <dimen name="ten_dp">10dp</dimen>
+    <dimen name="sixteen_dp">16dp</dimen>
+    <dimen name="twenty_dp">20dp</dimen>
+    <dimen name="twenty_three_dp">23dp</dimen>
+    <dimen name="twenty_five_dp">25dp</dimen>
+    <dimen name="thirty_dp">30dp</dimen>
+    <dimen name="thirty_five_dp">35dp</dimen>
+    <dimen name="forty_dp">40dp</dimen>
+    <dimen name="fifty_dp">50dp</dimen>
+    <dimen name="fifty_five_dp">55dp</dimen>
+    <dimen name="sixty_dp">60dp</dimen>
+    <dimen name="sixty_five_dp">65dp</dimen>
+    <dimen name="eighty_dp">80dp</dimen>
+    <dimen name="hundred_dp">100dp</dimen>
+    <dimen name="one_fifty_dp">150dp</dimen>
+    <dimen name="one_six_eight_dp">168dp</dimen>
+    <dimen name="two_fifty_dp">250dp</dimen>
+    <dimen name="two_seven_four_dp">274dp</dimen>
+    <dimen name="three_hundreds_dp">300dp</dimen>
+    <dimen name="three_five_five_dp">355dp</dimen>
+    <dimen name="four_one_seven_dp">417dp</dimen>
+    <dimen name="five_hundreds_dp">500dp</dimen>
+    <dimen name="six_hundreds_dp">600dp</dimen>
+    <dimen name="seven_hundreds_dp">700dp</dimen>
+    <dimen name="thousand_dp">1000dp</dimen>
 </resources>
