--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="@dimen/twenty_five_sp"
-        android:height="@dimen/twenty_five_sp"
+        android:width="@dimen/twenty_five_dp"
+        android:height="@dimen/twenty_five_dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
