--- a/app/src/main/res/layout-land/activity_category.xml
+++ b/app/src/main/res/layout-land/activity_category.xml
@@ -10,22 +10,22 @@
         android:id="@+id/image_Add_Col"
         android:layout_width="@dimen/forty_dp"
         android:layout_height="@dimen/forty_dp"
+        android:layout_marginTop="@dimen/two_dp"
+        android:layout_marginEnd="@dimen/ten_dp"
         android:background="@drawable/adding_button"
         android:text="@string/adding_button_plus_sign"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/thirty_dp"
-        android:layout_marginTop="@dimen/five_dp"
-        android:layout_marginEnd="@dimen/ten_dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryNameTextView"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/image_Add_Row"
         android:layout_width="@dimen/forty_dp"
         android:layout_height="@dimen/forty_dp"
         android:layout_marginStart="@dimen/ten_dp"
-        android:layout_marginBottom="@dimen/ten_dp"
+        android:layout_marginBottom="@dimen/zero_dp"
         android:background="@drawable/adding_button"
         android:text="@string/adding_button_plus_sign"
         android:textAlignment="center"
@@ -39,12 +39,11 @@
         android:id="@+id/categoryNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/five_dp"
+        android:layout_marginTop="@dimen/two_dp"
+        android:layout_marginStart="@dimen/ten_dp"
         android:fontFamily="@font/convergence"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/thirty_dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,15 +51,15 @@
         android:id="@+id/relativeLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintHeight_max="@dimen/five_hundreds_dp"
-        app:layout_constraintHeight_min="@dimen/five_hundreds_dp"
         android:layout_marginStart="@dimen/five_dp"
+        android:layout_marginTop="@dimen/two_dp"
         android:layout_marginEnd="@dimen/five_dp"
-        android:layout_marginBottom="@dimen/thirty_dp"
-        android:layout_marginTop="@dimen/ten_dp"
+        android:layout_marginBottom="@dimen/five_dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="@dimen/three_hundreds_dp"
+        app:layout_constraintHeight_min="@dimen/three_hundreds_dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_Add_Col">
 
