--- a/app/src/main/res/layout/versus_category.xml
+++ b/app/src/main/res/layout/versus_category.xml
@@ -10,38 +10,38 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/ten_sp">
+        android:layout_margin="@dimen/ten_dp">
 
         <TextView
             android:id="@+id/categoryTextView"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/fifty_five_sp"
+            android:layout_height="@dimen/fifty_five_dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/five_sp"
+            android:layout_marginStart="@dimen/five_dp"
             android:fontFamily="@font/convergence"
             android:gravity="center"
             android:text="@string/Line1"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/twenty_five_sp" />
+            android:textSize="@dimen/twenty_five_dp" />
 
         <ImageView
             android:id="@+id/image_Category_Delete"
-            android:layout_width="@dimen/fifty_five_sp"
-            android:layout_height="@dimen/fifty_five_sp"
+            android:layout_width="@dimen/fifty_five_dp"
+            android:layout_height="@dimen/fifty_five_dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/two_sp"
-            android:layout_marginEnd="@dimen/zero_sp"
+            android:layout_marginTop="@dimen/two_dp"
+            android:layout_marginEnd="@dimen/zero_dp"
             android:src="@drawable/ic_delete" />
 
         <ImageView
             android:id="@+id/image_Category_Edit"
-            android:layout_width="@dimen/fifty_five_sp"
-            android:layout_height="@dimen/fifty_five_sp"
+            android:layout_width="@dimen/fifty_five_dp"
+            android:layout_height="@dimen/fifty_five_dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="@dimen/one_sp"
-            android:layout_marginEnd="@dimen/five_sp"
+            android:layout_marginTop="@dimen/one_dp"
+            android:layout_marginEnd="@dimen/five_dp"
             android:layout_toStartOf="@+id/image_Category_Delete"
             android:src="@drawable/ic_edit" />
 
